utilisateur refactor